--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="nav-bar">
     
-    <!-- <the-header></the-header> -->
+    <the-header></the-header>
   </header>
   <div id="cont">
     <main>
@@ -332,95 +332,16 @@
       </section>
     </div>
     <section id="foot">
-      <div class="container-xxl">
-          <div class="row justify-content-center">
-          <div class="col-md-3 col-lg-2">
-              <h1 class="text-center">fruits haven</h1>
-              <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, repellendus.</p>
-              <div class="stars text-center">
-              <i class="bi bi-facebook"></i>
-              <i class="bi bi-instagram"></i>
-              <i class="bi bi-twitter"></i>
-              <i class="bi bi-whatsapp"></i>
-              </div>
-          </div>
-          <div class="col-md-2 col-lg-2">
-              <h1 class="text-center">quick links</h1>
-              <div class="links text-center">
-              <a href="#" class="q-link">
-                  <i class="bi bi-arrow-right"></i>home
-              </a>
-              <a href="products.html" class="q-link">
-                  <i class="bi bi-arrow-right"></i>Products
-              </a>
-              <a href="#" class="q-link">
-                  <i class="bi bi-arrow-right"></i>Contact Us
-              </a>
-              <a href="#" class="q-link">
-                  <i class="bi bi-arrow-right"></i>about us
-              </a>
-              <a href="#" class="q-link">
-                  <i class="bi bi-arrow-right"></i>login
-              </a>
-              </div>
-          </div>
-          <div class="col-md-3 col-lg-2">
-              <h1 class="text-center">contact info</h1>
-              <div class="links">
-              <div class="link">
-                  <i class="bi bi-phone"></i>
-                  <p>25588899966</p>
-              </div>
-              <div class="link">
-                  <i class="bi bi-phone"></i>
-                  <p>25588899966</p>
-              </div>
-              <div class="link">
-                  <i class="bi bi-envelope"></i>
-                  <p>dsdjsdhjoj@kssksjkdsd</p>
-              </div>
-              <div class="link">
-                  <i class="bi bi-geo-alt-fill"></i>
-                  <p>dksdsjdsldjs</p>
-              </div>
-              </div>
-          </div>
-          <div class="col-md-4 col-lg-3 btt text-center">
-            <h1 class="text-center">newsletter</h1>
-            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-            <form action="#" class="">
-                <div class="mb-3 input-group">
-                <span class="input-group-text">
-                <i class="bi bi-envelope-fill"></i>
-                </span>
-                <input type="email
-                " class="form-control" id="emaill" placeholder="e.g. myemail@email.com">
-                <span class="input-group-text">
-                    <span class="info" data-bs-toggle="tooltip" data-bs-placement="top" title="Enter an email address to get latest news">
-                    <i class="bi bi-question-circle text-muted"></i>
-                    </span>
-                </span>
-                </div>
-                <button class="btn mb-2">subscribe</button>
-            </form>
-            <div class="cards">
-                <img class="img-fluid" src="src/images/express.webp" alt="american express">
-                <img class="img-fluid" src="src/images/master.png" alt="master card">
-                <img class="img-fluid" src="src/images/visa.png" alt="visa card">
-                <img class="img-fluid" src="src/images/pay.png" alt="paypal">
-            </div>
-          </div>
-          </div>
-      </div>
+      
     </section>
     </main>
   </div>
   <footer>
-    <h6 class="text-center">created by rashdowdev | all rights reserved</h6>
+   <the-footer></the-footer>
   </footer>
-  <script type="module" src="src/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="src/js/headerFooter.js"></script>
-  <script type="module" src="src/js/style.js"></script>
-  <script type="module" src="src/js/itemsData.js"></script>
+  <script defer type="module" src="src/js/bootstrap.bundle.min.js"></script>
+  <script  src="src/js/headerFooter.js"></script>
+  <script   src="src/js/itemsData.js"></script>
+  
 </body>
 </html>
