done writing the js for cart

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                   <h1 class="fw-b text-center my-4">fulfill your fruity dreams</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, vero iusto sint consequatur expedita repellat placeat tempore quae earum explicabo cum odit quia vel ipsum tempora quod ipsa deserunt impedit necessitatibus maiores quam nam! Obcaecati possimus magnam, necessitatibus officiis nemo esse molestiae nam eos officia natus mollitia minus soluta exercitationem.</p>
               </div>
-              <button type="button" class="btn my-4">read more</button>
+              <a href="index.html">
+                <button type="button" class="btn my-4">read more</button>
+              </a>
+              
           </div>
       </article>
     </section>
