done adjusting the layout with scss and filling the links

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <article class="banner-bkg">
           <div class="container-xxl">
               <div class="banner-img">
-                  <h1 class="fw-b text-center my-4">fulfill your fruity dreams</h1>
+                  <h1 class="fw-b text-center">fulfill your fruity dreams</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, vero iusto sint consequatur expedita repellat placeat tempore quae earum explicabo cum odit quia vel ipsum tempora quod ipsa deserunt impedit necessitatibus maiores quam nam! Obcaecati possimus magnam, necessitatibus officiis nemo esse molestiae nam eos officia natus mollitia minus soluta exercitationem.</p>
               </div>
-              <a href="index.html">
-                <button type="button" class="btn my-4">read more</button>
+              <a href="index.html#banner"class="btn my-4" >
+                read more
               </a>
               
           </div>
@@ -34,30 +34,30 @@
       <section class="mb-5" id="features">
         <h1 class="text-center mb-">features</h1>
         <div class="container-md">
-          <div class="row my-1 justify-content-center">
-            <div class="col-7 col-md-3 col-lg-2 mx-2">
+          <div class="row my-3 justify-content-center">
+            <div class="col-8 col-md-3 col-lg-3 fts">
               <div class="card my-2">
                 <div class="card-body text-center py-2">
                   <img class="img-fluid" src="src/images/free.webp" alt="">
                   <div class="feat-txt">
-                    <h6>free delivery</h6>
+                    <p>free delivery</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-7 col-md-3 col-lg-2 mx-2">
+            <div class="col-8 col-md-3 col-lg-3 fts">
               <div class="card my-2">
                 <div class="card-body text-center py-2">
                   <img class="img-fluid" src="src/images/support.jpg" alt="">
-                  <h6>customer support</h6>
+                  <p>customer support</p>
                 </div>
               </div>
             </div>
-            <div class="col-7 col-md-3 col-lg-2 mx-2">
+            <div class="col-8 col-md-3 col-lg-3 fts">
               <div class="card my-2">
                 <div class="card-body text-center py-2">
                   <img class="img-fluid" src="src/images/easy.jpg" alt="">
-                  <h6>flexible payment</h6>
+                  <p>flexible payment</p>
                 </div>
               </div>
             </div>
@@ -130,32 +130,20 @@
         <div class="container-md">
           <div class="row my2 justify-content-center">
             <div class="col-9 col-md-3">
-              <div class="cad-1 my-2">
-                <div class="card-bod-1 text-center py-2">
-                  <div class="cat-img-1">
-                  <img src="src/images/milk.webp" alt="">
+              <div class="cad-4 my-2">
+                  <div class="card-bod-4 text-center py-2">
+                  <div class="cat-img-4">
+                    <img src="src/images/apples.jpeg" alt="">
                   </div>
                   <div class="cate-des">
-                    <h3>dairy products</h3>
+                    <h3>fruits</h3>
                     <p><small>up to</small> 45% off</p>
-                    <button type="button" class="btn">view category</button>
+                    <a href="products.html#fruits"class="btn my-4" >
+                      view category
+                    </a>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-9 col-md-3">
-              <div class="cad-2 my-2">
-                <div class="card-bod-2 text-center py-2">
-                  <div class="cat-img-2">
-                  <img src="src/images/beef.jpeg" alt="">
                   </div>
-                <div class="cate-des">
-                  <h3>meat</h3>
-                  <p><small>up to</small> 45% off</p>
-                  <button type="button" class="btn">view category</button>
-                </div>
-                </div>
-              </div>
+                </div> 
             </div>
             <div class="col-9 col-md-3">
               <div class="cad-3 my-2">
@@ -166,24 +154,44 @@
                 <div class="cate-des">
                   <h3>vegetables</h3>
                   <p><small>up to</small> 45% off</p>
-                  <button type="button" class="btn">view category</button>
+                  <a href="products.html#veg"class="btn my-4" >
+                    view category
+                  </a>
                 </div>
                 </div>
               </div> 
             </div>
             <div class="col-9 col-md-3">
-              <div class="cad-4 my-2">
-                  <div class="card-bod-4 text-center py-2">
-                  <div class="cat-img-4">
-                    <img src="src/images/apples.jpeg" alt="">
+              <div class="cad-2 my-2">
+                <div class="card-bod-2 text-center py-2">
+                  <div class="cat-img-2">
+                  <img src="src/images/beef.jpeg" alt="">
+                  </div>
+                <div class="cate-des">
+                  <h3>meat</h3>
+                  <p><small>up to</small> 45% off</p>
+                  <a href="products.html#meat"class="btn my-4" >
+                    view category
+                  </a>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-9 col-md-3">
+              <div class="cad-1 my-2">
+                <div class="card-bod-1 text-center py-2">
+                  <div class="cat-img-1">
+                  <img src="src/images/milk.webp" alt="">
                   </div>
                   <div class="cate-des">
-                    <h3>vegetables</h3>
+                    <h3>dairy products</h3>
                     <p><small>up to</small> 45% off</p>
-                    <button type="button" class="btn">view category</button>
+                    <a href="products.html#dairy"class="btn my-4" >
+                      view category
+                    </a>
                   </div>
-                  </div>
-                </div> 
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -206,11 +214,11 @@
                 </div>
               </div>
             </div>
-            <div class="col col
+            <div class="col blog-text col
             -md-8 col-lg-6">
               <h3>blog post here</h3>
               <div class="blog-date">
-                <small>sunday feb 19, 2023</small>
+                <small>sunday dec 24, 2023</small>
               </div>
               <div class="blog-des">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolorem animi qui officia, fuga consectetur non iste! Molestias corporis vero eos ipsam voluptatem repudiandae saepe nam rem culpa natus error distinctio minima veritatis eum temporibus, omnis atque dolore facere sed tenetur adipisci accusantium explicabo excepturi dolores? Eligendi quas quisquam minus.</p>
@@ -239,7 +247,7 @@
               <div class="blog-tittle">
                 <h3>blog post here</h3>
                 <div class="blog-date">
-                  <small>saturday feb 18, 2023</small>
+                  <small>saturday dec 23, 2023</small>
                 </div>
                 <div class="blog-des">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolorem animi qui officia, fuga consectetur non iste! Molestias corporis vero eos ipsam voluptatem repudiandae saepe nam rem culpa natus error distinctio minima veritatis eum temporibus, omnis atque dolore facere sed tenetur adipisci accusantium explicabo excepturi dolores? Eligendi quas quisquam minus.</p>
@@ -269,7 +277,7 @@
               <div class="blog-tittle">
                 <h3>blog post here</h3>
                 <div class="blog-date">
-                  <small>friday feb 17, 2023</small>
+                  <small>friday dec 22, 2023</small>
                 </div>
                 <div class="blog-des">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolorem animi qui officia, fuga consectetur non iste! Molestias corporis vero eos ipsam voluptatem repudiandae saepe nam rem culpa natus error distinctio minima veritatis eum temporibus, omnis atque dolore facere sed tenetur adipisci accusantium explicabo excepturi dolores? Eligendi quas quisquam minus.</p>
@@ -345,6 +353,6 @@
   <script defer type="module" src="src/js/bootstrap.bundle.min.js"></script>
   <script  src="src/js/headerFooter.js"></script>
   <script   src="src/js/itemsData.js"></script>
-  
+  <script src="src/js/style.js"></script>
 </body>
 </html>
