restructured the code, thereby reusing code and a single multidimentional array.

--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
   </footer>
   <script defer type="module" src="src/js/bootstrap.bundle.min.js"></script>
   <script  src="src/js/headerFooter.js"></script>
-  <script   src="src/js/itemsData.js"></script>
-  <script src="src/js/style.js"></script>
+  <script src="src/js/data.js"></script>
+  <script   src="src/js/cart.js"></script>
+  
 </body>
 </html>
